2006-11-03  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/tinyscheme/scheme.c (utf8_stricmp): use
	g_utf8_casefold() to implement case insensitive sorting.

2006-11-02  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/Makefile.am: Removed USE_STRCASECMP. Use the
	setting for USE_STRLWR that is used in TinyScheme.

	* plug-ins/script-fu/tinyscheme/Makefile.am: Removed USE_STRCASECMP.

	* plug-ins/script-fu/tinyscheme/scheme.c
	* plug-ins/script-fu/tinyscheme/scheme.h: Added missing SCHEME_EXPORT
	to a couple of function declarations. Eliminated USE_STRCASECMP by
	using internal UTF8 string comparison routine.

	* plug-ins/script-fu/tinyscheme/scheme-private.h: Stop some compiler
	warnings.

2006-11-02  Michael Natterer  <mitch@gimp.org>

	Don't let each terminating plug-in procedure end its progress,
	because that progress may still be in use by another plug-in.

	* app/plug-in/gimpplugin-progress.[ch]
	(gimp_plug_in_progress_attach)
	(gimp_plug_in_progress_detach): new functions which maintain
	a simple attach count for a GimpProgress

	* app/plug-in/gimpplugin-progress.c
	* app/plug-in/gimppluginprocframe.c: call attach() when setting
	proc_frame->progress. Call detach() in gimp_plug_in_progress_end()
	and only call gimp_progress_end() if detaching lowered the attach
	count to 0.

2006-11-02  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/flarefx.c (flare_center_create)
	* plug-ins/common/nova.c (nova_center_create): don't expand the
	coordinates widget horizontally.

	* plug-ins/common/lcms.c: added padding.

2006-11-02  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpviewrendererpalette.c
	(gimp_view_renderer_palette_render): fix rendering for
	n_columns == 1 (bug #369368).

2006-11-02  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/lcms.c: improved wording.

2006-11-01  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpviewrendererpalette.c
	(gimp_view_renderer_palette_render): fix cell_width calculation